--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myapp",
   "version": "0.1.0",
-  "homepage": "https://hakonelias.github.io/Cv-React",
+  "homepage": "https://hakonelias.github.io/CV-React",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
